fix(sidebar): Fix buggy sidebar on mobile devices

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -54,11 +54,12 @@ input[type="file"]::file-selector-button:hover {
 }
 
 .sidebar {
-  width: 550px;
+  width: 100%; /* Adjust the width to fit the mobile screen */
+  max-width: 550px; /* Set a maximum width for larger screens */
   height: 100vh;
   background-color: var(--sat-blurry-background); /* Adjust the opacity here */
   position: fixed;
-  right: -550px;
+  right: -100%; /* Initially hide the sidebar off-screen */
   top: 0;
   transition: right 0.3s ease-in-out;
   z-index: 999;
